inputs now respond correctly to touch events ; enlarges some inputs on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,57 @@
 
 @media screen and (max-width: 799px) {  
 
+  div.App .p5-container input[type="checkbox"]:checked ~ *,
+  div.App .p5-container input[type="checkbox"]:checked ~ #canvas-display-area{
+    display: none;
+  }
+
+  body .App{
+    margin-top: calc(var(--canvas-size) + 100px);
+  }
+
+  #canvas-display-area{
+    width: var(--canvas-size) !important;
+  }
+
+  /*
+
+
+  TEST STUFF - FIXED CANVAS ON SMALL SCREEN 
+
+  clean up / decide if this is good or not
+
+
+
+  */
+  .p5-container{
+    top: 0;
+    width: var(--canvas-size) !important;
+    position: fixed !important;
+    justify-self: center;
+    /* margin: auto; */
+
+    /* margin-top: 0 !important; */
+    /* padding-top: 1em; */
+    z-index: 20000;
+    --overlay-color: #0008;
+    box-shadow: 0 calc(-100vw + 1em + 32px) 0 100vw var(--overlay-color);
+    background-color: var(--overlay-color);    
+  }
+
+
+  .p5-container input[type="checkbox"]::after{
+    position: relative;
+    left: calc(100% + 8px + 1em);
+    display: flex;
+    flex-wrap: nowrap;
+    content: 'collapse canvas';
+  }
+
+  .p5-container input[type="checkbox"]:checked::after{
+    content: 'expand canvas';
+  }
+
   .horizontal-gutter{
     display: none;
   }  
@@ -92,11 +143,27 @@
   }
 
   body .App .bezier-input{
-    --bezier-canvas-width: 150px;
-    --bezier-canvas-height: 120px;
+    --bezier-canvas-width: 200px;
+    --bezier-canvas-height: 200px;
+
+    --bezier-control-size: 25px;
+  }
+
+  body .App .slider{
+    --slider-thumb-width: 24px;
   }
 
 
+}
+
+@media screen and (min-width: 800px) {
+  .p5-container input[type="checkbox"]{
+    display: none;
+  }
+
+  body .App .p5-container{
+    display: flex;
+  }
 }
 
 @media screen and (min-width: 800px) and (max-width: 1149px){
@@ -156,6 +223,7 @@
   }
 
 }
+
 
 @media screen and (min-width: 1150px) {
 
@@ -332,7 +400,13 @@ body.toast{
   
 }
 
-
+/* touchscreen behavior */
+canvas{
+  touch-action: pinch-zoom;
+}
+input{
+  touch-action: none;
+}
 
 body .App [data-tooltip]::after{
   font-size: var(--font-size);
@@ -521,14 +595,13 @@ body .App .bezier-input{
   font-family: 'extrude';
   box-shadow: inset 0 0 0 1px var(--background-color);
   padding: 1px;
-
-
 }
 
 
 .p5-container{
   position: relative;
   display: flex;
+  flex-direction: column;
 
   margin-bottom: auto;
   grid-column: 3;  
@@ -728,7 +801,7 @@ div.buttons > :nth-child(n + 3){
 .file-input.pimage-input button{  background-image: url(../public/images/file-open-p-white.png);  }
 .dark .file-input.pimage-input button{  background-image: url(../public/images/file-open-p-black.png);  }
 
-.file-input.emap-input button{  background-image: url(../public/images/file-open-e-white-128.png);  }
+.file-input.emap-input button{  background-image: url(../public/images/file-open-e-white.png);  }
 .dark .file-input.emap-input button{  background-image: url(../public/images/file-open-e-black.png);  }
 
 .dark .file-input button{
@@ -747,11 +820,14 @@ div.buttons > :nth-child(n + 3){
   appearance: none; -webkit-appearance: none;  
   --button-color: var(--primary-color);
   background-color: var(--button-color);  
+  background-repeat: no-repeat;
   background-size: contain;
   padding: 16px;
   border: var(--border-width) solid var(--button-color);  
-  
+  /* background-clip: ; */
 
+  /* background-clip: padding-box; */
+  /* border-color: #3ab; */
   image-rendering: pixelated;
   image-rendering: crisp-edges;
 
